--- a/index.html
+++ b/index.html
@@ -184,6 +184,46 @@
 
         <!-- accordeon -->
 
-        
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Out Team
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                 <p>This is Robocode project. Progammer is Zhuk Vladislav.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Our Chef
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>it's just a web-programming project. We don't have ony chefs.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <!-- footer -->
+
+        <footer>
+          <hr>
+          +380968820386
+          <hr>
+          <a href="">Our Youtube</a>
+          <hr>
+          <a href="">Our Telegram</a>
+          <hr>
+          Pravdy avenue, 31A
+        </footer>
   </body>
 </html>
